--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "node-starter",
-  "private": true,
+  "name": "login_unverified_member_with_pics",
+  "version": "1.0.0",
+  "description": "Login/signup system with profile picture upload",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
